--- a/app/frontend/src/assets/css/popup.css
+++ b/app/frontend/src/assets/css/popup.css
@@ -8,7 +8,7 @@
   right: 0;
   bottom: 0;
   position: fixed;
-  z-index: 999999999999999999;
+  z-index: 50;
 }
 
 .overlay {
